# TheBoy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  buildme.sh  main.cpp  main.h
include/: collections.h  common.h  globalTypes.h
include/Controllers/: emulatorController.h
include/components/: Cartridge.h
src/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  collections.h  common.h  instruction.cpp  instruction.h
src/Components/: CMakeLists.txt  FIFOData.h  PixelPipeline.cpp  PixelPipeline.h  addressbus.cpp  addressbus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  dma.cpp  dma.h  inputController.cpp  inputController.h  instruc_funcs.cpp  instruc_funcs.h  interrupt.cpp  interrupt.h  io.cpp  io.h  iogb.cpp  iogb.h  lcd.cpp  lcd.h  ppu.cpp  ppu.h  ppu_states.cpp  ppu_states.h  ram.cpp  ram.h  timer.cpp  timer.h
src/EmulatorController/: CMakeLists.txt  emulView.cpp  emulView.h  emulatorController.cpp  emulatorController.h
src/components/: CMakeLists.txt  addressbus.cpp  addressbus.h  cartridge.cpp  cartridge.h
